# MarceloRDPJ-jarvis-do-cerrado-prod

./: .coverage  .env.example  .gitignore  .opencode.json  Dockerfile  LICENSE  README.md  debug_fuzz.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_repro.db  teste
.github/workflows/: tests.yml
core/: ai.py  baseline.py  brain.py  context.py  context_reader.py  events.py  executor.py  flows.py  router.py  rules.py  telegram_utils.py  utils.py
docs/: ARCHITECTURE.md  RELEASE_NOTES_ASSISTENTE_ADULTO.md  deployment.md  structure.md  user_guide.md
docs/architecture/: technical_architecture.md
modules/: network.py  smarthome.py
nlp/: intent_engine.py  time_parser.py
scripts/: backup_db.py  ble_scan.py
services/: automations.py  collector.py  energy.py  guardian.py
src/jarvis/: config.py  config.yaml  main.py
src/jarvis/api/: __init__.py  app.py  integration_engine.py  mcp_handler.py  webhook_manager.py
src/jarvis/core/: ai.py  baseline.py  brain.py  context.py  crof_ai.py  (+13 more)
storage/: state_manager.py
tests/: conftest.py  stress_test.py  test_adguard.py  test_bot_logic.py  test_brain_local_llm_flow.py  test_capability_honesty.py  test_executor_hydration_llm.py  test_hydration.py  test_hydration_analytics.py  test_integrations.py  test_local_brain.py  test_local_web_tools.py  test_log_sanitization.py  test_observability.py  test_persistence_migrations.py  test_reminder_delivery_callbacks.py  test_reminders.py  test_router_classification.py  test_safe_reply_text.py  test_webhooks.py  test_wol_integration.py
(+28 files in other folders)
